# django-redis-blog

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
backend/: openapi-schema.yml  pyproject.toml
backend/common/: urls.py  views.py
backend/common/management/commands/: clearcache.py
backend/config/: settings.py
backend/posts/: models.py  serializers.py  views.py
backend/posts/migrations/: 0003_auto_20191003_1441.py
backend/users/: serializers.py  urls.py
common/: permissions.py  urls.py
config/: settings.py  urls.py
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.tsx  client.js  configStore.js  constants.js  index.js  store.js  utils.js
frontend/src/actions/: alertsActions.js  authActions.js  commentsActions.js  postsAction.js  tagsActions.js
frontend/src/components/: Alert.js  Alerts.js  CreatePostForm.js  DNavbar.js  LoadingIndicator.js  PostList.js  PostListItem.js  TagList.js
frontend/src/pages/: CreatePost.js  Home.js  Login.js  PostDetails.js  Register.js
frontend/src/reducers/: alertsReducer.js  authReducer.js  commentsReducer.js  index.js  postsReducer.js  tagsReducer.js
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_comment.py  0004_auto_20191003_1912.py
users/: views.py
